ranking attempt based on columns

--- a/notebook_challenge.ipynb
+++ b/notebook_challenge.ipynb
@@ -1322,6 +1322,37 @@
    "source": [
     "(leftjoin_copy.isna().sum() * 100 / leftjoin_copy.shape[0]).sort_values(ascending=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "leftjoin_copy['rank'] = leftjoin_copy.groupby('query_id')['is_click'].rank(ascending = False)\n",
+    "\n",
+    "# df.groupby('Auction_ID')['Bid_Price'].rank(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4. , 1. , 4.5, 1.5, 5. , 2. , 2.5, 5.5, 3. , 6. ])"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "leftjoin_copy['rank'].unique()"
+   ]
   }
  ],
  "metadata": {
