--- a/notebook_challenge.ipynb
+++ b/notebook_challenge.ipynb
@@ -29,6 +29,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Understanding\n",
+    "\n",
+    "We look at the different aspects of the datasets provided to us.\n",
+    "\n",
+    "* Majority of the column classes are masked with alphanumeric characters\n",
+    "* The predictor class _is_click_ is available in the train dataset\n",
+    "* The attributes dataset can be joined with the train dataset using a left join to get a holistic picture of the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
@@ -293,22 +306,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "408263"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train['product_id'].nunique()"
+    "# train['product_id'].nunique()"
    ]
   },
   {
@@ -571,27 +573,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "443145    124.000000\n",
-       "443146    416.000000\n",
-       "443147    184.041667\n",
-       "443148    245.041667\n",
-       "443149    125.000000\n",
-       "Name: start_online_date, dtype: float64"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "attributes['start_online_date'].tail()"
+    "# attributes['start_online_date'].tail()"
    ]
   },
   {
@@ -614,6 +600,14 @@
     "\n",
     "for i in range(0,2):\n",
     "    print(\"The shape of \"+str(all_dfs_name[i])+\" is: \" +str(all_dfs[i].shape))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we factorize the columns for understandability.\n",
+    "Before doing that, we make a copy of the train and attribute datasets (as a checkpoint)"
    ]
   },
   {
@@ -1075,50 +1069,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "context_type          4.347618\n",
-       "attribute_values      0.000000\n",
-       "week                  0.000000\n",
-       "user_id               0.000000\n",
-       "session_id            0.000000\n",
-       "product_id            0.000000\n",
-       "page_type             0.000000\n",
-       "previous_page_type    0.000000\n",
-       "device_category       0.000000\n",
-       "device_platform       0.000000\n",
-       "user_tier             0.000000\n",
-       "user_country          0.000000\n",
-       "context_value         0.000000\n",
-       "product_price         0.000000\n",
-       "week_day              0.000000\n",
-       "material_values       0.000000\n",
-       "is_click              0.000000\n",
-       "gender                0.000000\n",
-       "main_colour           0.000000\n",
-       "second_colour         0.000000\n",
-       "season                0.000000\n",
-       "collection            0.000000\n",
-       "category_id_l1        0.000000\n",
-       "category_id_l2        0.000000\n",
-       "category_id_l3        0.000000\n",
-       "brand_id              0.000000\n",
-       "season_year           0.000000\n",
-       "start_online_date     0.000000\n",
-       "query_id              0.000000\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'leftjoin_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-d2e09fdb239a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Check the % of missing values for all columns, after joining\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;33m(\u001b[0m\u001b[0mleftjoin_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misna\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;36m100\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mleftjoin_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mascending\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'leftjoin_df' is not defined"
+     ]
     }
    ],
    "source": [
+    "# Check the % of missing values for all columns, after joining\n",
+    "\n",
     "(leftjoin_df.isna().sum() * 100 / leftjoin_df.shape[0]).sort_values(ascending=False)"
    ]
   },
@@ -1139,6 +1107,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Convert the group of all factorized column to a single list column\n",
+    "\n",
     "cols = ['user_id', 'session_id', 'page_type', 'previous_page_type',\n",
     "       'device_category', 'device_platform', 'user_tier', 'user_country',\n",
     "       'context_value', 'gender', 'main_colour', 'second_colour', 'season', \n",
@@ -1289,6 +1259,8 @@
     }
    ],
    "source": [
+    "# Filling missing values with mode in context_type column\n",
+    "\n",
     "leftjoin_copy['context_type'] = leftjoin_copy['context_type'].fillna(leftjoin_copy['context_type'].mode()[0])\n",
     "\n",
     "leftjoin_copy.head()"
@@ -1320,6 +1292,8 @@
     }
    ],
    "source": [
+    "# Check missing values\n",
+    "\n",
     "(leftjoin_copy.isna().sum() * 100 / leftjoin_copy.shape[0]).sort_values(ascending=False)"
    ]
   },
@@ -1329,6 +1303,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Ranking\n",
+    "\n",
     "leftjoin_copy['rank'] = leftjoin_copy.groupby('query_id')['is_click'].rank(ascending = False)\n",
     "\n",
     "# df.groupby('Auction_ID')['Bid_Price'].rank(ascending=False)"
