code: aggregate, sort and rank values approach

--- a/notebook_challenge.ipynb
+++ b/notebook_challenge.ipynb
@@ -1947,16 +1947,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data_sort['rank'] = train_data_sort['col_sum'].rank(ascending=0, method = 'first')"
+    "train_data_sort['rank'] = train_data_sort.groupby(['query_id', 'product_id'])['col_sum'].rank(method = 'first')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1988,74 +1988,124 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2467734</th>\n",
-       "      <td>b409e19407f172f1eb3db14303442fe05dc2532ad9b5f8...</td>\n",
-       "      <td>8e9e00573faecc9d5dcdccaec2308681e80ac00fbf5132...</td>\n",
-       "      <td>5.023881</td>\n",
-       "      <td>3507990.0</td>\n",
+       "      <th>5</th>\n",
+       "      <td>0000437da0efd6e292f12a8a3bf7525de5bd05b5807a74...</td>\n",
+       "      <td>aa0bbdfa55326b5c08d3472b1ee1d56fe13a82f63f46c8...</td>\n",
+       "      <td>12.587505</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>522820</th>\n",
-       "      <td>263ea1e38126fe0c7bfbff24a33b1a09f4dac4f8cd4bb4...</td>\n",
-       "      <td>a3af8727270125f4087e87f6b32cdd3f1643dbb6e3f5ef...</td>\n",
-       "      <td>5.081404</td>\n",
-       "      <td>3507989.0</td>\n",
+       "      <th>3</th>\n",
+       "      <td>0000437da0efd6e292f12a8a3bf7525de5bd05b5807a74...</td>\n",
+       "      <td>9e03ca4af958bef1ce5d54e684a40ee7e3a9aa7e5010b6...</td>\n",
+       "      <td>12.570549</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3459943</th>\n",
-       "      <td>fc7f432e797a478a761f6cbb56689b0977c79c52736fe3...</td>\n",
-       "      <td>4a7a19acadc3b7a34e45cad12febba2c30c035214de86d...</td>\n",
-       "      <td>5.247024</td>\n",
-       "      <td>3507988.0</td>\n",
+       "      <th>0</th>\n",
+       "      <td>0000437da0efd6e292f12a8a3bf7525de5bd05b5807a74...</td>\n",
+       "      <td>1efd18182268101b62a1ea12a9cafbe05487f3abb92924...</td>\n",
+       "      <td>12.570858</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>76039</th>\n",
-       "      <td>0584998eafc556cda7b6077401b99a4b42a5d51c2c08d5...</td>\n",
-       "      <td>67323d723ea3729a27355fb03414eabb95590775861103...</td>\n",
-       "      <td>5.379897</td>\n",
-       "      <td>3507987.0</td>\n",
+       "      <th>4</th>\n",
+       "      <td>0000437da0efd6e292f12a8a3bf7525de5bd05b5807a74...</td>\n",
+       "      <td>9e7f6f10b18f35ce924575f599465265e22fa9d75b13c9...</td>\n",
+       "      <td>12.570535</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1815337</th>\n",
-       "      <td>849f0952f4b7152c0b64929039ba2423cbaf3da8f66b2e...</td>\n",
-       "      <td>45c78386ba7b7f83b17c3d66e5f36c375df5f7a61db564...</td>\n",
-       "      <td>5.429346</td>\n",
-       "      <td>3507986.0</td>\n",
+       "      <th>1</th>\n",
+       "      <td>0000437da0efd6e292f12a8a3bf7525de5bd05b5807a74...</td>\n",
+       "      <td>62349c6eda0dc9fe8bb023213f03ebe93aefa5cbcdfecf...</td>\n",
+       "      <td>12.572942</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>000277cbba868c6698e0635c57a37bc99bc63b271ebc67...</td>\n",
+       "      <td>32f8344ccea67da4718889c2836ac68fb5bbf38de99e55...</td>\n",
+       "      <td>12.887269</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>0002826b012ac2d93a0398ee5f67fff4b3e7f0545db719...</td>\n",
+       "      <td>d81476f0b2fd7387f6ed8c84f43728f586f8986d3eddc9...</td>\n",
+       "      <td>12.410620</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>0002826b012ac2d93a0398ee5f67fff4b3e7f0545db719...</td>\n",
+       "      <td>4d2149e7e98d677139cb90d866c0d8dfe0bd3d04dc7c47...</td>\n",
+       "      <td>12.564617</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>0002826b012ac2d93a0398ee5f67fff4b3e7f0545db719...</td>\n",
+       "      <td>da8c9e6ba67fc4a7f2acb08c003c86a898e3a142da8c22...</td>\n",
+       "      <td>12.406439</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>0002826b012ac2d93a0398ee5f67fff4b3e7f0545db719...</td>\n",
+       "      <td>d04b364cd5716cc57a71540f4d15223031d9e61e421dfc...</td>\n",
+       "      <td>12.407065</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>100 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                  query_id  \\\n",
-       "2467734  b409e19407f172f1eb3db14303442fe05dc2532ad9b5f8...   \n",
-       "522820   263ea1e38126fe0c7bfbff24a33b1a09f4dac4f8cd4bb4...   \n",
-       "3459943  fc7f432e797a478a761f6cbb56689b0977c79c52736fe3...   \n",
-       "76039    0584998eafc556cda7b6077401b99a4b42a5d51c2c08d5...   \n",
-       "1815337  849f0952f4b7152c0b64929039ba2423cbaf3da8f66b2e...   \n",
+       "                                              query_id  \\\n",
+       "5    0000437da0efd6e292f12a8a3bf7525de5bd05b5807a74...   \n",
+       "3    0000437da0efd6e292f12a8a3bf7525de5bd05b5807a74...   \n",
+       "0    0000437da0efd6e292f12a8a3bf7525de5bd05b5807a74...   \n",
+       "4    0000437da0efd6e292f12a8a3bf7525de5bd05b5807a74...   \n",
+       "1    0000437da0efd6e292f12a8a3bf7525de5bd05b5807a74...   \n",
+       "..                                                 ...   \n",
+       "93   000277cbba868c6698e0635c57a37bc99bc63b271ebc67...   \n",
+       "100  0002826b012ac2d93a0398ee5f67fff4b3e7f0545db719...   \n",
+       "96   0002826b012ac2d93a0398ee5f67fff4b3e7f0545db719...   \n",
+       "101  0002826b012ac2d93a0398ee5f67fff4b3e7f0545db719...   \n",
+       "99   0002826b012ac2d93a0398ee5f67fff4b3e7f0545db719...   \n",
        "\n",
-       "                                                product_id   col_sum  \\\n",
-       "2467734  8e9e00573faecc9d5dcdccaec2308681e80ac00fbf5132...  5.023881   \n",
-       "522820   a3af8727270125f4087e87f6b32cdd3f1643dbb6e3f5ef...  5.081404   \n",
-       "3459943  4a7a19acadc3b7a34e45cad12febba2c30c035214de86d...  5.247024   \n",
-       "76039    67323d723ea3729a27355fb03414eabb95590775861103...  5.379897   \n",
-       "1815337  45c78386ba7b7f83b17c3d66e5f36c375df5f7a61db564...  5.429346   \n",
+       "                                            product_id    col_sum  rank  \n",
+       "5    aa0bbdfa55326b5c08d3472b1ee1d56fe13a82f63f46c8...  12.587505   1.0  \n",
+       "3    9e03ca4af958bef1ce5d54e684a40ee7e3a9aa7e5010b6...  12.570549   1.0  \n",
+       "0    1efd18182268101b62a1ea12a9cafbe05487f3abb92924...  12.570858   1.0  \n",
+       "4    9e7f6f10b18f35ce924575f599465265e22fa9d75b13c9...  12.570535   1.0  \n",
+       "1    62349c6eda0dc9fe8bb023213f03ebe93aefa5cbcdfecf...  12.572942   1.0  \n",
+       "..                                                 ...        ...   ...  \n",
+       "93   32f8344ccea67da4718889c2836ac68fb5bbf38de99e55...  12.887269   1.0  \n",
+       "100  d81476f0b2fd7387f6ed8c84f43728f586f8986d3eddc9...  12.410620   1.0  \n",
+       "96   4d2149e7e98d677139cb90d866c0d8dfe0bd3d04dc7c47...  12.564617   1.0  \n",
+       "101  da8c9e6ba67fc4a7f2acb08c003c86a898e3a142da8c22...  12.406439   1.0  \n",
+       "99   d04b364cd5716cc57a71540f4d15223031d9e61e421dfc...  12.407065   1.0  \n",
        "\n",
-       "              rank  \n",
-       "2467734  3507990.0  \n",
-       "522820   3507989.0  \n",
-       "3459943  3507988.0  \n",
-       "76039    3507987.0  \n",
-       "1815337  3507986.0  "
+       "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_data_sort.head(5)"
+    "train_data_sort.sort_values(['query_id']).head(100)"
    ]
   },
   {
