doc: minor change to the documentation

--- a/notebook_challenge.ipynb
+++ b/notebook_challenge.ipynb
@@ -4547,6 +4547,15 @@
     "\n",
     "# # df2 = df.drop(cols, axis=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Will add new approach"
+   ]
   }
  ],
  "metadata": {
